--- a/src/pages/[labSlug]/index.astro
+++ b/src/pages/[labSlug]/index.astro
@@ -1,5 +1,5 @@
 ---
-import BaseLayout from '../../layouts/BaseLayout.astro'
+import WebsiteLayout from '../../layouts/WebsiteLayout.astro'
 import { LabHomepage } from '../../components/LabHomepage'
 import { getLabs, getLabBySlug, getCourses, getEvents, getProjects, getArticles, getLabSlugs } from '../../lib/api'
 import { breadcrumbJsonLd } from '../../lib/seo'
@@ -30,7 +30,7 @@ const jsonLd = breadcrumbJsonLd([
 ])
 ---
 
-<BaseLayout
+<WebsiteLayout
   title={lab.name}
   description={lab.description}
   image={lab.heroImage}
@@ -62,4 +62,4 @@ const jsonLd = breadcrumbJsonLd([
       alert('Merci ! Vous êtes inscrit(e) à la newsletter.')
     }}
   />
-</BaseLayout>
+</WebsiteLayout>
