--- a/src/pages/[labSlug]/projects/[projectSlug]/index.astro
+++ b/src/pages/[labSlug]/projects/[projectSlug]/index.astro
@@ -1,5 +1,5 @@
 ---
-import BaseLayout from '../../../../layouts/BaseLayout.astro'
+import WebsiteLayout from '../../../../layouts/WebsiteLayout.astro'
 import { getLabs, getLabBySlug, getProjects, getProjectBySlug } from '../../../../lib/api'
 import { breadcrumbJsonLd } from '../../../../lib/seo'
 
@@ -28,7 +28,7 @@ const jsonLd = breadcrumbJsonLd([
 ])
 ---
 
-<BaseLayout
+<WebsiteLayout
   title={project.title}
   description={project.shortDescription}
   image={project.images[0]}
@@ -135,4 +135,4 @@ const jsonLd = breadcrumbJsonLd([
       </section>
     )}
   </article>
-</BaseLayout>
+</WebsiteLayout>
