--- a/src/pages/donate/index.astro
+++ b/src/pages/donate/index.astro
@@ -1,5 +1,5 @@
 ---
-import BaseLayout from '../../layouts/BaseLayout.astro'
+import WebsiteLayout from '../../layouts/WebsiteLayout.astro'
 import WebsiteHeader from '../../components/WebsiteHeader'
 import WebsiteFooter from '../../components/WebsiteFooter'
 import DonationForm from '../../components/DonationForm'
@@ -8,7 +8,7 @@ import { getLabs } from '../../lib/api'
 const labs = await getLabs()
 ---
 
-<BaseLayout title="Faire un don" description="Soutenez le mouvement Semisto en faisant un don pour les jardins-forêts">
+<WebsiteLayout title="Faire un don" description="Soutenez le mouvement Semisto en faisant un don pour les jardins-forêts">
   <WebsiteHeader client:load labs={labs} currentLabId={null} currentLanguage="fr" availableLanguages={['fr', 'en', 'de']} />
 
   <div class="pt-32 pb-20 px-6">
@@ -44,4 +44,4 @@ const labs = await getLabs()
   </div>
 
   <WebsiteFooter client:visible labs={labs} />
-</BaseLayout>
+</WebsiteLayout>
