--- a/src/pages/donate/index.astro
+++ b/src/pages/donate/index.astro
@@ -1,15 +1,12 @@
 ---
 import WebsiteLayout from '../../layouts/WebsiteLayout.astro'
-import WebsiteHeader from '../../components/WebsiteHeader'
-import WebsiteFooter from '../../components/WebsiteFooter'
 import DonationForm from '../../components/DonationForm'
 import { getLabs } from '../../lib/api'
 
 const labs = await getLabs()
 ---
 
-<WebsiteLayout title="Faire un don" description="Soutenez le mouvement Semisto en faisant un don pour les jardins-forêts">
-  <WebsiteHeader client:load labs={labs} currentLabId={null} currentLanguage="fr" availableLanguages={['fr', 'en', 'de']} />
+<WebsiteLayout title="Faire un don" description="Soutenez le mouvement Semisto en faisant un don pour les jardins-forêts" labs={labs}>
 
   <div class="pt-32 pb-20 px-6">
     <div class="max-w-4xl mx-auto">
@@ -43,5 +40,4 @@ const labs = await getLabs()
     </div>
   </div>
 
-  <WebsiteFooter client:visible labs={labs} />
 </WebsiteLayout>
